email, password and phone number user edit

--- a/veoc/templates/veoc/change_password.html
+++ b/veoc/templates/veoc/change_password.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Change username</title>
+    <title>Edit Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet"
@@ -19,43 +19,93 @@
     <script src="/static/js/jquery.multi-select.js"></script>
 </head>
 <body>
-<div class="modal-dialog">
-    <div class="modal-content">
-        <div class="modal-header">
-            <h1 class="text-center">Your Password has expired!<br> Please change the old password then sign
-                in
-        </div>
-        <div class="modal-body">
-            <form class="col-md-12" center-block method="post" action="{% url 'veoc:change_password' %}"> {% csrf_token %}
-                <div class="form-group">
-                    <input type="text" name="oldpassword" class="form-control input-lg" placeholder="Old Password">
-                </div>
-                <div class="form-group">
-                    <input type="password" name="newpassword_one" class="form-control input-lg"
-                           placeholder="New Password">
-                </div>
-                <div class="form-group">
-                    <input type="password" name="newpassword_two" id="newpassword_two" class="form-control input-lg"
-                           placeholder="Confirm New Password">
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Update" class="btn btn-block btn-lg btn-primary" placeholder="Update">
-                    <br>
-                </div>
-            </form>
-            <div class="modal-footer">
-                <div class="col-md-12">
-                    <!-- <button class="btn">Cancel</button>-->
-                </div>
+  <div class="container">
+  	<div class="row">
+        <!-- left column -->
+        <!-- edit form column -->
+        <div class="col-md-9" >
+
+          <h3>Personal information</h3>
+<p>You can edit some of your details, then click on save changes to Save. </p>
+          <form class="form-horizontal" role="form" method="post" action="{% url 'veoc:change_password' %}"> {% csrf_token %}
+
+            <div class="form-group">
+              <label class="col-lg-3 control-label">First name:</label>
+              <div class="col-lg-8">
+                <input class="form-control" type="text" readonly name="first_name" id="first_name" value="{{ u.first_name }}">
+
+              </div>
             </div>
+            <div class="form-group">
+              <label class="col-lg-3 control-label">Last name:</label>
+              <div class="col-lg-8">
+                <input class="form-control" type="text" id="last_name" name="last_name" readonly value="{{ u.last_name }}">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-lg-3 control-label">Access Level:</label>
+              <div class="col-lg-8">
+                <input class="form-control" type="text" id="access_level" name="access_level" readonly value="{{ person.access_level }}">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-md-3 control-label">Username:</label>
+              <div class="col-md-8">
+                <input class="form-control" type="text" name="username" id="username" readonly value="{{ u.username }}">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-lg-3 control-label">Email:</label>
+              <div class="col-lg-8">
+                <input class="form-control" type="email" id="email" name="email" value="{{ u.email }}">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-lg-3 control-label">Phone Number:</label>
+              <div class="col-md-8">
+                <input class="form-control" type="text" id="phone_no"  name="phone_no" value="{{ person.phone_number}}">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-md-3 control-label">Password:</label>
+              <div class="col-md-8">
+                <input class="form-control" name="newpassword_two" type="password" id="newpassword_two">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-md-3 control-label">Confirm password:</label>
+              <div class="col-md-8">
+                <input class="form-control" type="password" name="newpassword_one" id="newpassword_one">
+                <label for="showpassword">Show Password</label>
+                <input type="checkbox" onclick="myFunction()" name="showpassword">
+              </div>
+            </div>
+            {% if messages %}
+            <div class="messages" style="color:red">
+            {% for message in messages %}
+            <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
+            {% endfor %}
+            </div>
+            {% endif %}
+            <div class="form-group">
+              <label class="col-md-3 control-label"></label>
+              <div class="col-md-8">
+               <input type="submit" value="Update" class="btn btn-primary" placeholder="Update">
+                <input type="reset" class="btn btn-default" value="Reset">
+                <input type="button" class="btn btn-danger" onclick="Back()" value="Cancel">
+              </div>
+            </div>
+          </form>
         </div>
     </div>
-</div>
+  </div>
+  <hr>
+
+
 </body>
 </html>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
@@ -63,39 +113,23 @@
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 <script>
-    window.onload = loadFeedback;
 
-    function loadFeedback() {
-        console.log("inside LoadFeedback");
-        var x = "{{message}}";
-        console.log(x);
-        if (x == "None") {
+    function Back(){
+        window.history.back();
+    }
 
-        } else if (x == "The two new passwords do not match") {
-            swal({
-                title: "Error!",
-                text: x,
-                icon: "Error",
-                button: "Ok!",
-            });
-
-        } else if (x == "The typed old passwords does not exist. Please type the correct old password") {
-            swal({
-                title: "Error!",
-                text: x,
-                icon: "Error",
-                button: "Ok!",
-            });
-        } else if (x == "Password updated successfully") {
-            swal({
-                title: "Error!",
-                text: x,
-                icon: "Error",
-                button: "Ok!"
-            }).then(function () {
-                window.location.href = "/logout";
-                console.log("Ok button was clicked");
-            });
-        }
+    function myFunction() {
+      var x = document.getElementById("newpassword_two");
+      if (x.type === "password") {
+        x.type = "text";
+      } else {
+        x.type = "password";
+      }
+      var xy = document.getElementById("newpassword_one");
+      if (xy.type === "password") {
+        xy.type = "text";
+      } else {
+        xy.type = "password";
+      }
     }
 </script>
