--- a/veoc/templates/veoc/forgot_password.html
+++ b/veoc/templates/veoc/forgot_password.html
@@ -24,6 +24,9 @@
 
     <!-- Main CSS-->
     <link href="/static/vendor/css/main.css" rel="stylesheet" media="all">
+
+    <!-- css for bootstrap buttons -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
@@ -36,16 +39,23 @@
                 </div> -->
                 <div class="card-body">
                     <h2 class="title">Please Enter your email Address</h2>
-
+                    {% if messages %}
+                  <div class="messages" style="color:red">
+                  {% for message in messages %}
+                  <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
+                  {% endfor %}
+                  </div>
+                  {% endif %}<br>
                     <!-- <form id="login_form"> -->
                     <form method="POST" action="{% url 'veoc:forgot_password' %}">
                         {% csrf_token %}
                         <div class="input-group">
                             <input type="email" name="search_field" class="form-control input-lg" id="search_field" placeholder="example: me@gmail.com" required>
                         </div>
-                         <p>We will email a unique password to this email address.</p>
+                         <p style="color: green">We will send instructions to recover your password to this email.</p>
                         <div class="p-t-20">
-                            <button class="btn btn--radius btn--green">  Submit Email  </button>
+                            <button type="submit" class="btn btn-success">  Submit Email  </button>
+                            <button type="button" class="btn btn-danger" onclick="Back()" >Cancel</button>
                         </div>
 
                     </form>
@@ -83,24 +93,10 @@
       //   {% endif %}
       // });
 
-      function searchEmail(){
-          var search_field=$('#search_field').val();
-          console.log(search_field);
-            Swal.fire({
-                        title: 'Wrong Login credentials!!',
-                        text: '{{msg}}',
-                        icon: 'error'
-            });
-      console.log("{{msg}}");
+      function Back(){
+          window.history.back();
       }
-      if(data == "error"){
-        Swal.fire({
-          title: 'Wrong login credentials!!',
-          text: 'Wrong Username or Password !!',
-          icon: 'error'
-        });
-      }
-      console.console.log(error);
+
       //if email exists, send mail, else, return email does not exist mail
 
     </script>
