--- a/veoc/templates/veoc/border_list.html
+++ b/veoc/templates/veoc/border_list.html
@@ -2,8 +2,7 @@
 
 {% block main %}
 
-    <script type="text/javascript"
-        src="https://cdn.datatables.net/v/dt/jqc-1.12.3/jszip-2.5.0/pdfmake-0.1.18/dt-1.10.12/b-1.2.2/b-flash-1.2.2/b-html5-1.2.2/b-print-1.2.2/datatables.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jqc-1.12.3/jszip-2.5.0/pdfmake-0.1.18/dt-1.10.12/b-1.2.2/b-flash-1.2.2/b-html5-1.2.2/b-print-1.2.2/datatables.min.js"></script>
 
             <div id="main-container">
         			<div id="breadcrumb">
