--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -87,7 +87,7 @@
                     {% endfor %}
                 </a>
             </li>
-            <li><a href="/change_password/" style="color: #ffffff">Change Password</a></li>
+            <li><a href="/edit_profile/" style="color: #ffffff">Edit Profile</a></li>
             <li><a href="/logout/" style="color: #ffffff">Logout</a></li>
         </ul>
 
