--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -159,7 +159,7 @@
                   <li><a href="/call_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-phone fa-stack-1x "></i></span>Calls Register</a></li>
                   <li><a href="/disease_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-code-fork fa-stack-1x "></i></span>Diseases Register</a></li>
                   <li><a href="/event_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Events Register</a></li>
-                  <li><a href="/quarantine_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>COVID-19 Quarantine</a></li>
+                  <li><a href="/line_listing"><span class="fa-stack fa-lg pull-left"><i class="fa fa-upload fa-stack-1x"></i></span>MOH 503 - Line Listing</a></li>
                   <li><a href="/quarantine_file_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-upload fa-stack-1x"></i></span>Quarantine Uploads</a></li>
               </ul>
           </li>
@@ -179,7 +179,6 @@
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/reportable_diseases">Reportable Diseases</a></li>
                   <li><a href="/reportable_event">Reportable Events</a></li>
-                  <li><a href="/line_listing">MOH 503 - Line Listing</a></li>
               </ul>
           </li>
           <li>
@@ -197,6 +196,7 @@
           <li>
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-clipboard fa-stack-1x "></i></span>JITENGE REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
+                  <li><a href="/quarantine_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>Quarantine Registration</a></li>
                   <li><a href="/quarantine_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Self Quarantine List</a></li>
                   <li><a href="/follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Ongoing Quarantine</a></li>
                   <li><a href="/symptomatic_cases"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
@@ -206,6 +206,7 @@
           <li>
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-home fa-stack-1x "></i></span>HOME CARE REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
+                  <li><a href="/home_care_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>HomeCare Registration</a></li>
                   <li><a href="/home_care_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Home Care List</a></li>
                   <li><a href="/home_care_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Ongoing Home Care</a></li>
                   <li><a href="/home_care_symtomatic"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
