Line list report under tabular reports

--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -191,6 +191,7 @@
                   <li><a href="/case_definition">Disease Case Definition</a></li>
                   <li><a href="/infectious_disease_report">Infectious Disease report</a></li>
                   <li><a href="/ongoing_tasks">Ongoing Incidents</a></li>
+                  <li><a href="/line_list_data">Line list report</a></li>
               </ul>
           </li>
           <li>
