--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -199,7 +199,7 @@
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/quarantine_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>Quarantine Registration</a></li>
                   <li><a href="/quarantine_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Self Quarantine List</a></li>
-                  <li><a href="/follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Ongoing Quarantine</a></li>
+                  <li><a href="/follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Quarantine Followup</a></li>
                   <li><a href="/symptomatic_cases"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
                   <li><a href="/complete_quarantine"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Quarantine</a></li>
               </ul>
@@ -209,7 +209,7 @@
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/home_care_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>HomeCare Registration</a></li>
                   <li><a href="/home_care_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Home Care List</a></li>
-                  <li><a href="/home_care_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Ongoing Home Care</a></li>
+                  <li><a href="/home_care_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Home Care Followup</a></li>
                   <li><a href="/home_care_symtomatic"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
                   <li><a href="/complete_home_care"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Home Care</a></li>
               </ul>
